// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListDataView should be fetched data by \`infinite\` 1`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "ability": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "active": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "canAsDimension": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "dataType": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "label": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": -52,
    "type": "flow.PropertySet",
  },
  "ability": undefined,
  "active": true,
  "canAsDimension": undefined,
  "dataType": Object {
    "elemType": Object {
      "fields": Array [
        Object {
          "active": true,
          "canAsDimension": false,
          "dataType": Object {
            "type": "dynamic",
          },
          "label": "业务对象明细",
          "name": "dataLinkForm",
        },
        Object {
          "active": true,
          "canAsDimension": false,
          "dataType": Object {
            "entity": "datalink.DataLinkTemplate",
            "type": "ref",
          },
          "label": "业务对象模板",
          "name": "dataLinkTemplateId",
        },
        Object {
          "active": true,
          "canAsDimension": true,
          "dataType": Object {
            "entity": "system_支付计划",
            "type": "ref",
          },
          "label": " 业务对象实例",
          "name": "dataLinkId",
        },
      ],
      "type": "complex",
    },
    "type": "list",
  },
  "label": "支付计划",
  "name": "payPlan",
}
`;

exports[`ListDataView should be fetched data by \`page\` 1`] = `
Array [
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -1,
      "type": "flow.PropertySet",
    },
    "ability": "pay",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "boolean",
    },
    "label": "按金额支付",
    "name": "payPlanMode",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -2,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "system_支付计划",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "支付计划",
    "name": "payPlan",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -3,
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "dynamic",
    },
    "label": "业务对象明细",
    "name": "dataLinkForm",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -4,
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkTemplate",
      "type": "ref",
    },
    "label": "业务对象模板",
    "name": "dataLinkTemplateId",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -5,
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity",
      "type": "ref",
    },
    "label": "业务对象实例",
    "name": "dataLinkId",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -6,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "scale": 0,
      "type": "number",
      "unit": "次",
    },
    "label": "打印次数",
    "name": "printCount",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -7,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "text",
    },
    "label": "打印状态",
    "name": "printState",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -8,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "organization.Staff",
      "type": "ref",
    },
    "label": "最后打印人",
    "name": "lastPrinter",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -9,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "date",
    },
    "label": "最后打印时间",
    "name": "lastPrintTime",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -10,
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.法人实体",
      "type": "ref",
    },
    "label": "法人实体",
    "name": "法人实体",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 2`] = `
Array [
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -11,
      "type": "flow.PropertySet",
    },
    "ability": "requisition",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "出行人",
    "name": "travelers",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -12,
      "type": "flow.PropertySet",
    },
    "ability": "feeDetail",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "invoice",
    },
    "label": "发票",
    "name": "invoiceForm",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -13,
      "type": "flow.PropertySet",
    },
    "ability": "requisition",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "requisition.RequisitionInfo",
      "type": "ref",
    },
    "label": "补充申请",
    "name": "linkRequisitionInfo",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -14,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "basedata.Enum.InvoiceType",
      "type": "ref",
    },
    "label": "发票类型",
    "name": "invoiceType",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -15,
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "money",
    },
    "label": "不计税金额",
    "name": "noTaxAmount",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -16,
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "money",
    },
    "label": "税额",
    "name": "taxAmount",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -17,
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "scale": 2,
      "type": "number",
      "unit": "%",
    },
    "label": "税率",
    "name": "taxRate",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -18,
      "type": "flow.PropertySet",
    },
    "ability": "permit",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "permitOrder",
    },
    "label": "订单详情",
    "name": "order",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -19,
      "type": "flow.PropertySet",
    },
    "ability": "trip",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "text",
    },
    "label": "行程明细ID",
    "name": "tripId",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -20,
      "type": "flow.PropertySet",
    },
    "ability": "trip",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "date",
    },
    "label": "行程日期",
    "name": "tripDate",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 3`] = `
Array [
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -21,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.c61e09f00eb127406400",
      "type": "ref",
    },
    "label": "实体galo",
    "name": "u_实体galo",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -22,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.汉字nwnvy1xz",
      "type": "ref",
    },
    "label": "自hvk8l",
    "name": "u_自hvk8l",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -23,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.项目",
      "type": "ref",
    },
    "label": "项目cnyk",
    "name": "u_项目cnyk",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -24,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.c61909fcb981f9c21800",
      "type": "ref",
    },
    "label": "普通赋值",
    "name": "u_普通赋值",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -25,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "date",
    },
    "label": "日期字段",
    "name": "u_日期字段",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -26,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "organization.Staff",
      "type": "ref",
    },
    "label": "新人1118",
    "name": "u_新人1118",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -27,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.87bf0a116b2443044c00",
      "type": "ref",
    },
    "label": "全",
    "name": "u_全",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -28,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "money",
    },
    "label": "金额字段",
    "name": "u_金额字段",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -29,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "money",
    },
    "label": "金额字段2",
    "name": "u_金额字段2",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -30,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "type": "text",
    },
    "label": "文本字段",
    "name": "u_文本字段",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 4`] = `
Array [
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -31,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.f87b09df02bc37050400",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7小白菜改",
    "name": "u_S7小白菜改",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -32,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.f87b09df02bc37050400",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7小白菜写",
    "name": "u_S7小白菜写",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -33,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.ae2109df02bc37052800",
      "type": "ref",
    },
    "label": "S7白菜读取",
    "name": "u_S7白菜读取",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -34,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.ae2109df02bc37052800",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7白菜写入",
    "name": "u_S7白菜写入",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -35,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "datalink.DataLinkEntity.ae2109df02bc37052800",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "S7白菜改",
    "name": "u_S7白菜改",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -36,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "多选员工",
    "name": "u_多选员工",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -37,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "员工多选",
    "name": "u_员工多选",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -38,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "entity": "organization.Staff",
        "type": "ref",
      },
      "type": "list",
    },
    "label": "员工多",
    "name": "u_员工多",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -39,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.d8a009f00eb127409800",
      "type": "ref",
    },
    "label": "实体9lgt",
    "name": "u_实体9lgt",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -40,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity.d8a009f00eb127409800",
      "type": "ref",
    },
    "label": "测试d7tz",
    "name": "u_测试d7tz",
  },
]
`;

exports[`ListDataView should be fetched data by \`page\` 5`] = `
Array [
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -41,
      "type": "flow.PropertySet",
    },
    "ability": "pay",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "boolean",
    },
    "label": "按金额支付",
    "name": "payPlanMode",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -42,
      "type": "flow.PropertySet",
    },
    "ability": undefined,
    "active": true,
    "canAsDimension": undefined,
    "dataType": Object {
      "elemType": Object {
        "fields": Array [
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "type": "dynamic",
            },
            "label": "业务对象明细",
            "name": "dataLinkForm",
          },
          Object {
            "active": true,
            "canAsDimension": false,
            "dataType": Object {
              "entity": "datalink.DataLinkTemplate",
              "type": "ref",
            },
            "label": "业务对象模板",
            "name": "dataLinkTemplateId",
          },
          Object {
            "active": true,
            "canAsDimension": true,
            "dataType": Object {
              "entity": "system_支付计划",
              "type": "ref",
            },
            "label": " 业务对象实例",
            "name": "dataLinkId",
          },
        ],
        "type": "complex",
      },
      "type": "list",
    },
    "label": "支付计划",
    "name": "payPlan",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -43,
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "dynamic",
    },
    "label": "业务对象明细",
    "name": "dataLinkForm",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -44,
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "entity": "datalink.DataLinkTemplate",
      "type": "ref",
    },
    "label": "业务对象模板",
    "name": "dataLinkTemplateId",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -45,
      "type": "flow.PropertySet",
    },
    "ability": "dataLink",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "datalink.DataLinkEntity",
      "type": "ref",
    },
    "label": "业务对象实例",
    "name": "dataLinkId",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -46,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "scale": 0,
      "type": "number",
      "unit": "次",
    },
    "label": "打印次数",
    "name": "printCount",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -47,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "text",
    },
    "label": "打印状态",
    "name": "printState",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -48,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "organization.Staff",
      "type": "ref",
    },
    "label": "最后打印人",
    "name": "lastPrinter",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -49,
      "type": "flow.PropertySet",
    },
    "ability": "print",
    "active": true,
    "canAsDimension": false,
    "dataType": Object {
      "type": "date",
    },
    "label": "最后打印时间",
    "name": "lastPrintTime",
  },
  Object {
    "__META__": Object {
      "collection": undefined,
      "fields": Object {
        "ability": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "active": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "canAsDimension": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "dataType": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "label": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
        "name": Object {
          "defaultValue": undefined,
          "referenceDef": false,
        },
      },
      "id": -50,
      "type": "flow.PropertySet",
    },
    "ability": "",
    "active": true,
    "canAsDimension": true,
    "dataType": Object {
      "entity": "basedata.Dimension.法人实体",
      "type": "ref",
    },
    "label": "法人实体",
    "name": "法人实体",
  },
]
`;
